--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,25 @@
             <groupId>com.samskivert</groupId>
             <artifactId>jmustache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.kill-bill.commons</groupId>
+            <artifactId>killbill-xmlloader</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.skife.config</groupId>
+            <artifactId>config-magic</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -128,7 +146,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Bundle-Activator>org.killbill.billing.plugin.notification.email.EmailNotificationActivator</Bundle-Activator>
+                        <Bundle-Activator>org.killbill.billing.plugin.notification.setup.EmailNotificationActivator</Bundle-Activator>
                         <Export-Package />
                         <Private-Package>org.killbill.billing.plugin.notification.email.*</Private-Package>
                         <!-- Optional resolution because exported by the Felix system bundle -->
