--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <groupId>org.kill-bill.billing.plugin.java</groupId>
     <artifactId>killbill-email-notifications-plugin</artifactId>
     <name>Kill Bill OSGI Email Notifications Plugin</name>
-    <version>0.3.0</version>
+    <version>0.3.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <description>Kill Bill Email Notifications Plugin</description>
     <url>http://github.com/killbill/killbill-email-notifications-plugin</url>
