--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,25 @@ jobs:
             - ~/.m2
           key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
 
+  test-h2:
+    <<: *defaults
+    docker:
+      - image: killbill/kbbuild:0.2.0
+    steps:
+      - checkout
+      - restore_cache:
+          key: v1-dependencies-{{ .Branch }}-{{ checksum "pom.xml" }}
+      - run: mvn clean install -Ptravis
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/ \;
+          when: always
+      - store_test_results:
+          path: ~/junit
+      - store_artifacts:
+          path: ~/junit
   test-mysql:
     <<: *defaults
     docker:
@@ -60,6 +79,9 @@ workflows:
   build-and-test:
     jobs:
       - build
+      - test-h2:
+          requires:
+            - build
       - test-mysql:
           requires:
             - build
