--- a/pom.xml
+++ b/pom.xml
@@ -273,7 +273,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-Activator>org.killbill.billing.plugin.notification.setup.EmailNotificationActivator</Bundle-Activator>
-                        <Export-Package />
+                        <Export-Package>org.killbill.billing.plugin.notification.api</Export-Package>
                         <Private-Package>org.killbill.billing.plugin.notification.*</Private-Package>
                         <!-- Optional resolution because exported by the Felix system bundle -->
                         <Import-Package>
