--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright 2010-2014 Ning, Inc.
-  ~ Copyright 2014-2020 Groupon, Inc
-  ~ Copyright 2014-2021 The Billing Project, LLC
-  ~
-  ~ The Billing Project licenses this file to you under the Apache License, version 2.0
-  ~ (the "License"); you may not use this file except in compliance with the
-  ~ License.  You may obtain a copy of the License at:
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
-  ~ License for the specific language governing permissions and limitations
-  ~ under the License.
-  -->
+<!-- ~ Copyright 2010-2014 Ning, Inc. ~ Copyright 2014-2020 Groupon, Inc 
+	~ Copyright 2014-2021 The Billing Project, LLC ~ ~ The Billing Project licenses 
+	this file to you under the Apache License, version 2.0 ~ (the "License"); 
+	you may not use this file except in compliance with the ~ License. You may 
+	obtain a copy of the License at: ~ ~ http://www.apache.org/licenses/LICENSE-2.0 
+	~ ~ Unless required by applicable law or agreed to in writing, software ~ 
+	distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
+	~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the 
+	~ License for the specific language governing permissions and limitations 
+	~ under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -44,7 +37,6 @@
         <check.fail-spotbugs>true</check.fail-spotbugs>
         <check.spotbugs-exclude-filter-file>spotbugs-exclude.xml</check.spotbugs-exclude-filter-file>
         <osgi.export>org.killbill.billing.plugin.notification.api,org.killbill.billing.plugin.notification.generator.*</osgi.export>
-        <osgi.extra-import>com.sun.activation.registries</osgi.extra-import>
         <osgi.private>org.killbill.billing.plugin.notification.*</osgi.private>
     </properties>
     <dependencyManagement>
@@ -68,6 +60,12 @@
         <dependency>
             <groupId>com.samskivert</groupId>
             <artifactId>jmustache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
+            <version>2.0.1</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
