.github: update ci job
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,4 +15,4 @@ jobs:
       plugin_name: 'killbill-email-notifications'
       integration_tests_goal: 'test:plugins:email-notifications'
       ddl_file: 'src/main/resources/ddl.sql'
-      integration_tests_ref: 'refs/heads/integration-tests'
+      integration_tests_ref: 'refs/heads/work-for-release-0.23.x'
