Set maven.javadoc.failOnError to false

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <properties>
         <check.fail-dependency>false</check.fail-dependency>
         <check.fail-spotbugs>true</check.fail-spotbugs>
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
         <check.spotbugs-exclude-filter-file>spotbugs-exclude.xml</check.spotbugs-exclude-filter-file>
         <osgi.export>org.killbill.billing.plugin.notification.api,org.killbill.billing.plugin.notification.generator.*</osgi.export>
         <osgi.private>org.killbill.billing.plugin.notification.*</osgi.private>
